[gd_scene load_steps=11 format=3 uid="uid://d2e45cw8bbhfj"]

[ext_resource type="Script" path="res://Choices.gd" id="1_n7i5q"]
[ext_resource type="FontFile" uid="uid://bsa1fmba5nnkk" path="res://assets/F77MinecraftRegular-0VYv.ttf" id="2_bxfu7"]
[ext_resource type="Texture2D" uid="uid://bqyv6o3ap4751" path="res://textures/ToggleButton/ToggleButton_OFF.png" id="3_mfvey"]
[ext_resource type="Texture2D" uid="uid://d4ltdgf40eb76" path="res://textures/ToggleButton/ToggleButton_ON.png" id="4_2hril"]
[ext_resource type="Texture2D" uid="uid://cf5b5j603t5xt" path="res://textures/ToggleButton/ToggleButton_MIDDLE.png" id="5_ckdau"]
[ext_resource type="PackedScene" uid="uid://0bouryp2467i" path="res://NextPrevButtons.tscn" id="6_dw7ay"]

[sub_resource type="LabelSettings" id="LabelSettings_h0qg1"]
font = ExtResource("2_bxfu7")
font_size = 48
shadow_size = 16
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r3xr5"]
font = ExtResource("2_bxfu7")
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u0qt2"]
font = ExtResource("2_bxfu7")
font_size = 24
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vem87"]
font = ExtResource("2_bxfu7")
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Choices" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n7i5q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "RESSOURCE PACK OPTIONS"
label_settings = SubResource("LabelSettings_h0qg1")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select one or both options."
label_settings = SubResource("LabelSettings_r3xr5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="MarginContMinecraftFolder" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer"]
layout_mode = 2
text = "In Drehmal, the Ressource Pack is responsible for changing some in-game textures and models, for more immersion into the realm.
The ressource pack is bound to your game by default : it only changes stuff when playing Drehmal. But if you want to, it can be globalised : that way, you will be able to have the Drehmal textures when playing the game regularly !
Of course, you can also choose both to have both, but since the ressource pack weighs a lot, you should only choose that if you have space to spare. "
label_settings = SubResource("LabelSettings_u0qt2")
horizontal_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="HBoxContainer_LOCAL" type="HBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer/HBoxContainer_LOCAL"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource("3_mfvey")
texture_pressed = ExtResource("4_2hril")
texture_hover = ExtResource("5_ckdau")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer/HBoxContainer_LOCAL"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Install the ressource pack locally"
label_settings = SubResource("LabelSettings_vem87")

[node name="HBoxContainer_GLOBAL" type="HBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer/HBoxContainer_GLOBAL"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource("3_mfvey")
texture_pressed = ExtResource("4_2hril")
texture_hover = ExtResource("5_ckdau")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer/HBoxContainer_GLOBAL"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Install the ressource pack globally"
label_settings = SubResource("LabelSettings_vem87")

[node name="HBoxContainer_BOTH" type="HBoxContainer" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer/HBoxContainer_BOTH"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource("3_mfvey")
texture_pressed = ExtResource("4_2hril")
texture_hover = ExtResource("5_ckdau")
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer/HBoxContainer_BOTH"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Install the pack both locally and globally"
label_settings = SubResource("LabelSettings_vem87")
autowrap_mode = 3

[node name="MarginContainer" parent="VBoxContainer" instance=ExtResource("6_dw7ay")]
layout_mode = 2
NextStepButton = true
PrevStepButton = true

[connection signal="toggled" from="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer/HBoxContainer_LOCAL/TextureButton" to="." method="_on_texture_button_toggled_LOCAL"]
[connection signal="toggled" from="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer/HBoxContainer_GLOBAL/TextureButton" to="." method="_on_texture_button_toggled_GLOBAL"]
[connection signal="toggled" from="VBoxContainer/MarginContMinecraftFolder/VBoxContainer/VBoxContainer/HBoxContainer_BOTH/TextureButton" to="." method="_on_texture_button_toggled_BOTH"]
